--- a/capstone_colmar_assets/css/style.css
+++ b/capstone_colmar_assets/css/style.css
@@ -37,6 +37,7 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 a {
     text-decoration: none;
@@ -100,7 +101,9 @@ header {
 }
 .section {
     width: 100%;
-    height: 92vh;
+    height: 100vh;
+}
+.flex_centering_vertically {
     display: flex;
     align-items: center;
 }
@@ -117,6 +120,9 @@ header {
 }
 .text_container {
     margin-left: 32px;
+}
+.text_container_v2 {
+    padding-left: 32px;
 }
 .text_container h1 {
     font-size: 32px;
@@ -144,4 +150,28 @@ header {
     background-color: black;
     font-size: 18px;
     filter: drop-shadow(0 0 10px rgb(15, 193, 206));
+}
+.little_images_section {
+    display: inline-flex;
+    height: 100%;
+    width: 40%;
+    border-left:var(--default-light-font-color) 1px solid;
+    flex-direction: column;
+    justify-content: start;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.flex_item {
+    height: 30%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.little_images_section a h4{
+    transition: all 0.1s ease-in 0.1s;
+}
+.little_images_section a:hover h4{
+    font-size: 18px;
+    color: rgb(44, 83, 192);
 }
