--- a/capstone_colmar_assets/css/style.css
+++ b/capstone_colmar_assets/css/style.css
@@ -16,7 +16,7 @@
     --emanuel-margin-top-vertical: 32px;
     --start-learning-thesis-exhibit-margin-vertical: 32px;
     --grid-gap: 32px;
-    --grid-margin-horizontal: 72px;
+    --grid-padding-horizontal: 0 72px;
     --grid-margin-bottom: 32px;
     --grid-image-height: auto;
     --grid-image-width: 100%;
@@ -107,6 +107,11 @@ header {
     display: flex;
     align-items: center;
 }
+.flex_column_spacing {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
 .bg_light_gray {
     background-color: var(--first-section-background-color);
 }
@@ -174,4 +179,66 @@ header {
 .little_images_section a:hover h4{
     font-size: 18px;
     color: rgb(44, 83, 192);
+}
+.grid {
+    display: grid;
+    width: 100%;
+    padding: var(--grid-padding-horizontal);
+    height: 80%;
+    gap: 32px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+                    "a b c"
+                    "d e f";
+    align-content: center;
+    justify-content: center;
+    position: relative;
+    top: 30px;
+}
+.a {
+    grid-area: a;
+}
+.b {
+    grid-area: b;
+}
+.c {
+    grid-area: c;
+}
+.d {
+    grid-area: d;
+}
+.e {
+    grid-area: e;
+}
+.f {
+    grid-area: f;
+}
+.dark_gray {
+    color: var(--default-dark-font-color);
+}
+.light_gray {
+    color: var(--default-light-font-color);
+}
+.grid_item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.grid_item img {
+    width: 100%;
+    height: auto;
+}
+.grid_item h3 {
+    transition: all 0.1s ease-in 0.1s;
+    font-family: 'Raleway', sans-serif;
+}
+.grid_item a:hover h3 {
+    color: black;
+}
+.padding_offset {
+    padding: 16px;
+}
+.lesser_padding_offset {
+    padding: 8px 16px;
 }
