--- a/capstone_colmar_assets/css/style.css
+++ b/capstone_colmar_assets/css/style.css
@@ -42,6 +42,10 @@
 a {
     text-decoration: none;
 }
+body {
+    position: relative;
+}
+/* header */
 header {
     height: var(--header-height);
     background-color: white;
@@ -75,19 +79,22 @@ header {
     justify-content: space-evenly;
     align-items: center;
     flex-shrink: 0;
-    min-width: 280px;
+    min-width: 340px;
 }
 .right_header a {
-    font-size: 14px;
+    font-size: 16px;
     color: var(--default-dark-font-color);
     text-decoration: none;
     transition: all 0.1s ease-in 0.1s;
     text-align: center;
+    font-weight: bolder;
+    font-family: Raleway, sans-serif;
 }
 .right_header a:hover {
     color: black;
-    font-size: 16px;
+    font-size: 18px;
 }
+/* first section */
 .first_section {
     position: relative;
     top: 64px;
@@ -156,6 +163,7 @@ header {
     font-size: 18px;
     filter: drop-shadow(0 0 10px rgb(15, 193, 206));
 }
+/* second section */
 .little_images_section {
     display: inline-flex;
     height: 100%;
@@ -166,6 +174,21 @@ header {
     position: absolute;
     top: 0;
     right: 0;
+}
+.little_images_section_v2 {
+    display: inline-flex;
+    height: auto;
+    width: 40%;
+    flex-direction: column;
+    justify-content: start;
+    position: absolute;
+    top: 132px;
+    right: 0;
+}
+.little_image {
+    height: auto; 
+    width: 35%; 
+    padding: 20px 0 20px 20px;
 }
 .flex_item {
     height: 30%;
@@ -180,11 +203,11 @@ header {
     font-size: 18px;
     color: rgb(44, 83, 192);
 }
+/* section with grid */
 .grid {
     display: grid;
     width: 100%;
     padding: var(--grid-padding-horizontal);
-    height: 80%;
     gap: 32px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -194,7 +217,7 @@ header {
     align-content: center;
     justify-content: center;
     position: relative;
-    top: 30px;
+    align-items: start;
 }
 .a {
     grid-area: a;
@@ -224,6 +247,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border-radius: 3%;
 }
 .grid_item img {
     width: 100%;
@@ -241,4 +265,106 @@ header {
 }
 .lesser_padding_offset {
     padding: 8px 16px;
+}
+/* last section */
+.thesis_exhibit a .flex_item{
+    transition: all 0.1s ease-in 0.1s;
+}
+.thesis_exhibit a .flex_item h2 {
+    transition: all 0.1s ease-in 0.1s;
+}
+.thesis_exhibit a:hover .flex_item {
+    color: white;
+    background-color: black;
+    z-index: 1;
+    transform: scale(1.1, 1.1) translate(-20px, 0);    
+}
+.thesis_exhibit a:hover .flex_item h2 {
+    color: var(--default-light-font-color);
+}
+.thesis_exhibit h3 {
+    color: var(--default-light-font-color);
+    transition: all 0.1s ease-in 0.1s;
+}
+.thesis_exhibit a:hover h3 {
+    color: white;
+}
+/* footer */
+footer {
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
+    border-top: var(--default-light-font-color) 1px solid;
+    z-index: 1;
+}
+.terms_and_privacy {
+    min-width: 177px;
+    padding: 16px 24px;
+    display: flex;
+    justify-content: space-around;
+}
+.terms_and_privacy h5 {
+    color: var(--default-light-font-color);
+    transition: all 0.1s ease-in 0.1s;
+}
+.terms_and_privacy a:hover h5 {
+    color: var(--default-dark-font-color);
+}
+@media only screen and (max-width: 1024px) {
+    #first_section {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    #first_section .text_container{
+        width: 100%;
+        height: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin: 50px 0 72px 0;
+    }
+    #first_section .button {
+        width: 80vw;
+    }
+    .little_images_section {
+        position: relative;
+        width: 100%;
+        border: 0;
+    }
+    .little_images_section img {
+        width: 20%;
+        height: auto;
+    }
+    .big_img {
+        width: 100%;
+        height: auto;
+        display: block;
+    }
+    .little_images_section_v2 {
+        position: relative;
+        width: 100%;
+        border: 0;
+    }
+    .little_images_section_v2 img {
+        width: 20%;
+        height: auto;
+    }
+    #third_section {
+        height: 120vh;
+    }
+    #fourth_section {
+        height: 205vh;
+    }
+    #fourth_section a:hover .flex_item {
+        transform: none;
+    }
+    #footer {
+        position: absolute;
+        width: 100%;
+    }
+    #fourth_section .text_container_v2 {
+        margin: 5% 0;
+    }
 }
