--- a/capstone_colmar_assets/css/style.css
+++ b/capstone_colmar_assets/css/style.css
@@ -45,6 +45,9 @@ a {
 body {
     position: relative;
 }
+main {
+    height: auto;
+}
 /* header */
 header {
     height: var(--header-height);
@@ -106,9 +109,12 @@ header {
     position: relative;
     top: 64px;
 }
+.offset_v2 {
+    position: relative;
+}
 .section {
     width: 100%;
-    height: 100vh;
+    height: auto;
 }
 .flex_centering_vertically {
     display: flex;
@@ -346,23 +352,14 @@ footer {
         position: relative;
         width: 100%;
         border: 0;
+        top: 5%;
     }
     .little_images_section_v2 img {
         width: 20%;
         height: auto;
     }
-    #third_section {
-        height: 120vh;
-    }
-    #fourth_section {
-        height: 205vh;
-    }
     #fourth_section a:hover .flex_item {
         transform: none;
-    }
-    #footer {
-        position: absolute;
-        width: 100%;
     }
     #fourth_section .text_container_v2 {
         margin: 5% 0;
