--- a/capstone_colmar_assets/css/style.css
+++ b/capstone_colmar_assets/css/style.css
@@ -48,6 +48,9 @@ body {
 main {
     height: auto;
 }
+.mobile {
+    display: none;
+}
 /* header */
 header {
     height: var(--header-height);
@@ -58,6 +61,9 @@ header {
     position: fixed;
     width: 100%;
     z-index: 1;
+}
+.mobile_header {
+    display: none;
 }
 .left_header {
     height: var(--logo-height);
@@ -225,6 +231,9 @@ header {
     position: relative;
     align-items: start;
 }
+.mobile_grid {
+    display: none;
+}
 .a {
     grid-area: a;
 }
@@ -316,7 +325,7 @@ footer {
 .terms_and_privacy a:hover h5 {
     color: var(--default-dark-font-color);
 }
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1024px) and (min-width: 481px) {
     #first_section {
         display: flex;
         flex-direction: column;
@@ -363,5 +372,150 @@ footer {
     }
     #fourth_section .text_container_v2 {
         margin: 5% 0;
+    }
+}
+@media only screen and (max-width: 480px) {
+    #first_section {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    #first_section .text_container{
+        width: 100%;
+        height: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin: 50px 0 72px 0;
+    }
+    #first_section .button {
+        width: 80vw;
+    }
+    .little_images_section {
+        position: relative;
+        width: 100%;
+        border: 0;
+    }
+    .little_images_section img {
+        width: 100%;
+        height: auto;
+    }
+    .big_img {
+        width: 100%;
+        height: auto;
+        display: block;
+    }
+    .little_images_section_v2 {
+        position: relative;
+        width: 100%;
+        border: 0;
+        top: 5%;
+    }
+    .little_images_section_v2 img {
+        width: 20%;
+        height: auto;
+    }
+    #fourth_section a:hover .flex_item {
+        transform: none;
+    }
+    #fourth_section .text_container_v2 {
+        margin: 5% 0;
+    }
+    .flex_item {
+        background-color: white;
+        align-items: flex-start;
+    }
+    .flex_item h4 {
+        margin: 24px 0;
+    }
+    .right_header {
+        display: none;
+    }
+    .left_header {
+        display: none;
+    }
+    .mobile {
+        display: block;
+    }
+    .not_mobile {
+        display: none;
+    }
+    .mobile_header {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+    .mobile_header a {
+        border-radius: 50%;
+        transition: all 0.1s ease-in 0.1s;
+    }
+    .mobile_header a:active {
+        box-shadow: 0 0 7px 7px rgb(15, 193, 206);
+        background-color: rgb(15, 193, 206);
+        transform: scale(1.2, 1.2);
+    }
+    .section {
+        border-bottom: 1px solid darkgrey;
+    }
+    .flex_item {
+        display: flex;
+        flex-direction: column;
+    }
+    .mobile_img {
+        width: 100%;
+        height: auto;
+        padding: 10px;
+    }
+    #third_section {
+        background-color: white;
+    }
+    .mobile_grid {
+        display: grid;
+        gap: 8px;
+        justify-items: left;
+        padding-bottom: 32px;
+    }
+    .mobile_grid h2 {
+        font-family: Raleway, sans-serif;
+        padding: 11px 10px;
+        transition: all 0.1s ease-in 0.1s;
+    }
+    .mobile_grid h2:active {
+        color: black;
+        font-size: 26px;
+    }
+    .mobile_grid a {
+        width: 100%;
+        height: 50px;
+    }
+    video {
+        margin-bottom: 64px;
+        margin-top: 0;
+    }
+    #footer {
+        border-top: none;
+    }
+    .button:hover {
+        transform: none;
+        background-color: var(--default-dark-font-color);
+        font-size: 16px;
+        filter: none;
+    }
+    .button:active {
+        transform: scale(1.1, 1.1);
+        background-color: black;
+        font-size: 18px;
+        filter: drop-shadow(0 0 10px rgb(15, 193, 206));
+    }
+    .little_images_section a:hover h4{
+        font-size: 16px;
+        color: rgb(41, 162, 202);
+    }
+    .little_images_section a:active h4{
+        font-size: 18px;
+        color: rgb(25, 52, 126);
     }
 }
